--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch A Sketch</title>
     <script src="./js/etch-a-sketch.js" defer></script>
-    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <div class="drawing-area">
-        
-    </div>
+<body style="display: flex; flex-direction: column; align-items: center;">
+    <button class="clear">Clear Area</button>
+    <div class="drawing-area"></div>
 </body>
 </html>
